--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "forkedserver.h": "c"
+        "forkedserver.h": "c",
+        "inet.h": "c",
+        "forkstrategy.h": "c"
     }
 }
