Functionality of communication now works fine n dandy between server and client

--- a/mathserver/Makefile
+++ b/mathserver/Makefile
@@ -6,4 +6,4 @@ server: main
 	gcc ./objects/*.o -o mathserver
 
 clean:
-	rm -f *.o objects/*.o mathserver
+	rm -f *.o objects/*.o mathserver resultFile*
